--- a/BOKiN/View/AdvertisementSettlementModalView/AdvertisementSettlementModalView.storyboard
+++ b/BOKiN/View/AdvertisementSettlementModalView/AdvertisementSettlementModalView.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qVQ-kO-KDF">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="280"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="290"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L8A-4t-Raq">
@@ -30,66 +30,67 @@
                                         </constraints>
                                         <viewLayoutGuide key="safeArea" id="VSj-TL-4sf"/>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="57p-Yz-DvX">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TfD-l0-Pvy">
                                         <rect key="frame" x="0.0" y="40" width="375" height="60"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jn4-tB-UPb">
-                                                <rect key="frame" x="0.0" y="0.0" width="100" height="60"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTs-Of-anN">
-                                                        <rect key="frame" x="35" y="12" width="30" height="36"/>
-                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                                        <state key="normal" title="ー"/>
-                                                    </button>
-                                                </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstItem="LTs-Of-anN" firstAttribute="centerX" secondItem="jn4-tB-UPb" secondAttribute="centerX" id="7h5-El-Unf"/>
-                                                    <constraint firstItem="LTs-Of-anN" firstAttribute="centerY" secondItem="jn4-tB-UPb" secondAttribute="centerY" id="Y62-Zr-0TP"/>
-                                                    <constraint firstAttribute="width" constant="100" id="b36-kR-E1a"/>
-                                                </constraints>
-                                            </view>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZBW-VY-TOS">
-                                                <rect key="frame" x="100" y="0.0" width="175" height="60"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="175" id="Ufd-pU-kvC"/>
-                                                </constraints>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qMV-om-CPB" userLabel="Charit Money" customClass="BoundLabel" customModule="BOKiN_Prototype" customModuleProvider="target">
+                                                <rect key="frame" x="165.5" y="5.5" width="44" height="49"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="41"/>
                                                 <nil key="textColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RUy-i8-Qwe">
-                                                <rect key="frame" x="275" y="0.0" width="100" height="60"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nsB-2m-wia">
-                                                        <rect key="frame" x="35" y="7.5" width="30" height="45"/>
-                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
-                                                        <state key="normal" title="＋"/>
-                                                    </button>
-                                                </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8vz-u0-q0C" userLabel="￥">
+                                                <rect key="frame" x="139.5" y="28.5" width="18" height="20.5"/>
                                                 <constraints>
-                                                    <constraint firstItem="nsB-2m-wia" firstAttribute="centerY" secondItem="RUy-i8-Qwe" secondAttribute="centerY" id="4jm-Es-FO7"/>
-                                                    <constraint firstItem="nsB-2m-wia" firstAttribute="centerX" secondItem="RUy-i8-Qwe" secondAttribute="centerX" id="Cfh-bX-Bgd"/>
-                                                    <constraint firstAttribute="width" constant="100" id="k9k-kP-vlY"/>
+                                                    <constraint firstAttribute="width" constant="18" id="dmC-0R-6fb"/>
                                                 </constraints>
-                                            </view>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="60" id="jCk-4Y-2wp"/>
+                                            <constraint firstItem="8vz-u0-q0C" firstAttribute="baseline" secondItem="qMV-om-CPB" secondAttribute="firstBaseline" id="Bye-c8-2Pn"/>
+                                            <constraint firstAttribute="height" constant="60" id="Sui-jv-Cfd"/>
+                                            <constraint firstItem="qMV-om-CPB" firstAttribute="centerY" secondItem="TfD-l0-Pvy" secondAttribute="centerY" id="X6H-uP-Pin"/>
+                                            <constraint firstItem="8vz-u0-q0C" firstAttribute="firstBaseline" secondItem="qMV-om-CPB" secondAttribute="firstBaseline" id="oKj-DW-4aG"/>
+                                            <constraint firstItem="qMV-om-CPB" firstAttribute="leading" secondItem="8vz-u0-q0C" secondAttribute="trailing" constant="8" symbolic="YES" id="qz2-9o-cjY"/>
+                                            <constraint firstItem="qMV-om-CPB" firstAttribute="centerX" secondItem="TfD-l0-Pvy" secondAttribute="centerX" id="seJ-kS-Ofi"/>
                                         </constraints>
-                                        <viewLayoutGuide key="safeArea" id="VX1-mp-dkA"/>
-                                    </stackView>
+                                    </view>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ET9-cB-iK8">
                                         <rect key="frame" x="0.0" y="100" width="375" height="150"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="150" id="cGN-5b-LNB"/>
                                         </constraints>
                                     </pickerView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SU4-k3-Yli">
-                                        <rect key="frame" x="0.0" y="250" width="375" height="30"/>
-                                        <state key="normal" title="寄付する"/>
-                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4oC-g0-fIv">
+                                        <rect key="frame" x="0.0" y="250" width="375" height="40"/>
+                                        <subviews>
+                                            <button opaque="NO" alpha="0.80000001192092896" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jbg-Dq-oF8">
+                                                <rect key="frame" x="37.5" y="0.0" width="300" height="40"/>
+                                                <color key="backgroundColor" red="0.96862745100000003" green="0.75294117650000003" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="300" id="TpQ-tf-vvn"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="広告を見て寄付する">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="4CI-vG-bb4"/>
+                                            <constraint firstItem="Jbg-Dq-oF8" firstAttribute="top" secondItem="qx2-32-Qxe" secondAttribute="top" id="5YA-lz-UtM"/>
+                                            <constraint firstItem="Jbg-Dq-oF8" firstAttribute="centerY" secondItem="4oC-g0-fIv" secondAttribute="centerY" id="9k2-37-lqG"/>
+                                            <constraint firstItem="Jbg-Dq-oF8" firstAttribute="centerX" secondItem="4oC-g0-fIv" secondAttribute="centerX" id="Jz4-aq-5F4"/>
+                                            <constraint firstItem="qx2-32-Qxe" firstAttribute="bottom" secondItem="Jbg-Dq-oF8" secondAttribute="bottom" id="w9e-g0-emL"/>
+                                        </constraints>
+                                        <viewLayoutGuide key="safeArea" id="qx2-32-Qxe"/>
+                                    </view>
                                 </subviews>
                             </stackView>
                         </subviews>
