--- a/BOKiN/View/SettlementModalView/SettlementModalView.storyboard
+++ b/BOKiN/View/SettlementModalView/SettlementModalView.storyboard
@@ -19,27 +19,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4FX-dj-CX3">
-                                <rect key="frame" x="0.0" y="148.5" width="375" height="370"/>
+                                <rect key="frame" x="12.5" y="148.5" width="350" height="370"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bE7-Hf-gIk">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="370"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="350" height="370"/>
                                         <subviews>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qi0-kC-VRu">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="350" height="48"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rhu-9F-Ap2" userLabel="ApplePay">
-                                                        <rect key="frame" x="0.0" y="10" width="187.5" height="30"/>
+                                                        <rect key="frame" x="0.0" y="10" width="175" height="30"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="187.5" id="hYN-6n-197"/>
+                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="175" id="hYN-6n-197"/>
                                                         </constraints>
                                                         <state key="normal" title="ApplePay">
                                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DOA-BA-DGh" userLabel="Advertisement">
-                                                        <rect key="frame" x="187.5" y="10" width="187.5" height="30"/>
+                                                        <rect key="frame" x="175" y="10" width="175" height="30"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="187.5" id="c9U-fY-gVE"/>
+                                                            <constraint firstAttribute="width" constant="175" id="c9U-fY-gVE"/>
                                                         </constraints>
                                                         <state key="normal" title="広告決済">
                                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -58,19 +58,19 @@
                                                 </constraints>
                                             </scrollView>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ghl-kK-4op">
-                                                <rect key="frame" x="0.0" y="48" width="375" height="322"/>
+                                                <rect key="frame" x="0.0" y="48" width="350" height="322"/>
                                                 <subviews>
                                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oyu-4I-epg">
-                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="322"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="350" height="322"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="375" id="ZTr-Pa-ZnB"/>
+                                                            <constraint firstAttribute="width" constant="350" id="ZTr-Pa-ZnB"/>
                                                         </constraints>
                                                         <connections>
                                                             <segue destination="l3B-ld-qRv" kind="embed" id="v1M-W7-lRY"/>
                                                         </connections>
                                                     </containerView>
                                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e8V-c1-n0P">
-                                                        <rect key="frame" x="375" y="0.0" width="375" height="322"/>
+                                                        <rect key="frame" x="350" y="0.0" width="350" height="322"/>
                                                         <connections>
                                                             <segue destination="Xai-fp-kkD" kind="embed" id="eBa-JQ-R7y"/>
                                                         </connections>
@@ -79,13 +79,13 @@
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="e8V-c1-n0P" secondAttribute="bottom" id="0aR-Rk-YKi"/>
                                                     <constraint firstItem="e8V-c1-n0P" firstAttribute="top" secondItem="Ghl-kK-4op" secondAttribute="top" id="BxL-zk-0Gt"/>
-                                                    <constraint firstAttribute="trailing" secondItem="oyu-4I-epg" secondAttribute="trailing" constant="375" id="Mzh-2F-vBG"/>
+                                                    <constraint firstAttribute="trailing" secondItem="oyu-4I-epg" secondAttribute="trailing" constant="350" id="Mzh-2F-vBG"/>
                                                     <constraint firstAttribute="trailing" secondItem="e8V-c1-n0P" secondAttribute="trailing" id="XhW-Vg-JYZ"/>
                                                     <constraint firstAttribute="bottom" secondItem="oyu-4I-epg" secondAttribute="bottom" id="ZL6-uQ-vfY"/>
                                                     <constraint firstItem="oyu-4I-epg" firstAttribute="top" secondItem="Ghl-kK-4op" secondAttribute="top" id="i2J-bN-TWD"/>
                                                     <constraint firstItem="oyu-4I-epg" firstAttribute="centerY" secondItem="Ghl-kK-4op" secondAttribute="centerY" id="rIZ-Lx-SxM"/>
                                                     <constraint firstItem="oyu-4I-epg" firstAttribute="leading" secondItem="Ghl-kK-4op" secondAttribute="leading" id="v7x-gT-0g0"/>
-                                                    <constraint firstItem="e8V-c1-n0P" firstAttribute="leading" secondItem="Ghl-kK-4op" secondAttribute="leading" constant="375" id="yY3-GW-I2N"/>
+                                                    <constraint firstItem="e8V-c1-n0P" firstAttribute="leading" secondItem="Ghl-kK-4op" secondAttribute="leading" constant="350" id="yY3-GW-I2N"/>
                                                 </constraints>
                                             </scrollView>
                                         </subviews>
@@ -96,25 +96,40 @@
                                     <constraint firstItem="RTY-tW-yrx" firstAttribute="trailing" secondItem="bE7-Hf-gIk" secondAttribute="trailing" id="LzE-fh-vZu"/>
                                     <constraint firstItem="bE7-Hf-gIk" firstAttribute="leading" secondItem="RTY-tW-yrx" secondAttribute="leading" id="Tmz-oV-RAb"/>
                                     <constraint firstItem="RTY-tW-yrx" firstAttribute="bottom" secondItem="bE7-Hf-gIk" secondAttribute="bottom" id="nQS-vw-5d5"/>
-                                    <constraint firstAttribute="width" constant="375" id="njc-CF-pFh"/>
+                                    <constraint firstAttribute="width" constant="350" id="njc-CF-pFh"/>
                                     <constraint firstAttribute="height" constant="370" id="r1U-Ph-x8A"/>
                                     <constraint firstItem="bE7-Hf-gIk" firstAttribute="top" secondItem="RTY-tW-yrx" secondAttribute="top" id="yEO-Db-9Mj"/>
                                 </constraints>
                                 <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                 <viewLayoutGuide key="safeArea" id="RTY-tW-yrx"/>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cxu-2q-Csh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="148.5"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rrn-Sq-VQi">
+                                <rect key="frame" x="0.0" y="518.5" width="375" height="148.5"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.31598984771573602" green="0.31598984771573602" blue="0.31598984771573602" alpha="0.3633882705479452" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="Rrn-Sq-VQi" firstAttribute="top" secondItem="4FX-dj-CX3" secondAttribute="bottom" id="6JH-nc-4cN"/>
+                            <constraint firstItem="O6V-fD-IJ0" firstAttribute="bottom" secondItem="Rrn-Sq-VQi" secondAttribute="bottom" id="72a-ge-CX8"/>
+                            <constraint firstItem="O6V-fD-IJ0" firstAttribute="trailing" secondItem="Cxu-2q-Csh" secondAttribute="trailing" id="HMG-UC-G11"/>
+                            <constraint firstItem="O6V-fD-IJ0" firstAttribute="trailing" secondItem="Rrn-Sq-VQi" secondAttribute="trailing" id="Xc4-jZ-4UU"/>
+                            <constraint firstItem="4FX-dj-CX3" firstAttribute="top" secondItem="Cxu-2q-Csh" secondAttribute="bottom" id="Yu5-L7-Qu4"/>
+                            <constraint firstItem="Cxu-2q-Csh" firstAttribute="leading" secondItem="O6V-fD-IJ0" secondAttribute="leading" id="aww-JU-bZf"/>
                             <constraint firstItem="4FX-dj-CX3" firstAttribute="centerY" secondItem="mdy-VQ-eIa" secondAttribute="centerY" id="jke-GD-stb"/>
+                            <constraint firstItem="Cxu-2q-Csh" firstAttribute="top" secondItem="mdy-VQ-eIa" secondAttribute="top" id="pSN-YZ-PsV"/>
+                            <constraint firstItem="Rrn-Sq-VQi" firstAttribute="leading" secondItem="O6V-fD-IJ0" secondAttribute="leading" id="yoH-U5-u5m"/>
                             <constraint firstItem="4FX-dj-CX3" firstAttribute="centerX" secondItem="mdy-VQ-eIa" secondAttribute="centerX" id="zMC-tX-Utc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O6V-fD-IJ0"/>
                     </view>
                     <connections>
+                        <outlet property="buttomCoverView" destination="Rrn-Sq-VQi" id="sbS-Xk-59I"/>
                         <outlet property="contentsScrollView" destination="Ghl-kK-4op" id="6Tn-S0-vfV"/>
-                        <outlet property="coverView" destination="mdy-VQ-eIa" id="C9a-Y2-haT"/>
                         <outlet property="navigationHeaderView" destination="Qi0-kC-VRu" id="6eT-yN-6Z1"/>
+                        <outlet property="topCoverView" destination="Cxu-2q-Csh" id="CTT-zS-9v9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AjS-UK-eE8" userLabel="First Responder" sceneMemberID="firstResponder"/>
