add: adMobVideo to AdvertisementSettlementModalView

--- a/BOKiN/View/AdvertisementSettlementModalView/AdvertisementSettlementModalView.storyboard
+++ b/BOKiN/View/AdvertisementSettlementModalView/AdvertisementSettlementModalView.storyboard
@@ -78,6 +78,9 @@
                                                 <state key="normal" title="広告を見て寄付する">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="pushAdMobButton:" destination="mxd-lw-8tS" eventType="touchUpInside" id="Buj-aS-7cm"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -109,6 +112,7 @@
                     <value key="contentSizeForViewInPopover" type="size" width="375" height="370"/>
                     <size key="freeformSize" width="350" height="320"/>
                     <connections>
+                        <outlet property="adMobButton" destination="Jbg-Dq-oF8" id="Z9p-wb-8Dd"/>
                         <outlet property="prefecturePicker" destination="ET9-cB-iK8" id="bjo-8u-s9H"/>
                     </connections>
                 </viewController>
